Added the possibility of generating Java classes with EJC from multiple edi-model. To achieve this, I added a postfix that will be added to the edimappingmodel.xml and bindingconfig.xml. This parameter has to be added to the pom. See example ejc-gen-multiple-files

--- a/edi/ejc/src/main/java/org/milyn/ejc/templates/bindingConfig.ftl.xml
+++ b/edi/ejc/src/main/java/org/milyn/ejc/templates/bindingConfig.ftl.xml
@@ -11,8 +11,7 @@
         <param name="stream.filter.type">SAX</param>
     </params>
 
-    <edi:reader mappingModel="/${classPackage}/edimappingconfig.xml" validate="false" />
-
+    <edi:reader mappingModel="/${classPackage}/${edimappingconfigFile}" validate="false" />
     <#list beanConfigs as beanConfig>
 
     <jb:bean beanId="${beanConfig.beanId}" class="${beanConfig.runtimeClass.name}" createOnElement="${beanConfig.createOnElement}">
